[gd_scene load_steps=7 format=3 uid="uid://1thaqtg7b51v"]

[ext_resource type="Script" path="res://Menu/menu.gd" id="1_knuly"]
[ext_resource type="Texture2D" uid="uid://cg7hbt3px07hu" path="res://Art/Assets/gamecover.png" id="2_i8yji"]
[ext_resource type="FontFile" uid="uid://b6opit5w86lpd" path="res://Fonts/odaria-font/Odaria-AR0wL.otf" id="2_y3t5f"]
[ext_resource type="FontFile" uid="uid://b7yeytx6bpr3p" path="res://Fonts/glitch-font/Glitchdemo-lxgGq.ttf" id="3_llw7x"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6c5u2"]
bg_color = Color(0.845405, 0.891373, 0.995929, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.27082, 0.370582, 0.898146, 1)
shadow_color = Color(0.49268, 0.0579238, 0.572681, 0.6)
shadow_size = 15

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p3j25"]
bg_color = Color(0.19885, 0.462537, 0.891375, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color(0.652899, 0.789081, 0.984279, 1)
shadow_color = Color(0.49268, 0.0579238, 0.572681, 0.6)
shadow_size = 15

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 6.0
offset_right = 6.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_knuly")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_i8yji")
stretch_mode = 6

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -229.0
offset_top = 87.0
offset_right = 261.0
offset_bottom = 158.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0.564706, 0, 0.764706, 1)
theme_override_colors/font_shadow_color = Color(0.256897, 0.0221858, 0.335788, 1)
theme_override_colors/font_outline_color = Color(0.155737, 0.145965, 0.436314, 1)
theme_override_constants/shadow_offset_y = 9
theme_override_constants/outline_size = 9
theme_override_constants/shadow_outline_size = 15
theme_override_fonts/font = ExtResource("2_y3t5f")
theme_override_font_sizes/font_size = 70
text = "The game Title"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -6.0
offset_top = 73.0
offset_right = -6.0
offset_bottom = 73.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 30
alignment = 1

[node name="Play" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.204793, 0.424378, 0.831968, 1)
theme_override_fonts/font = ExtResource("3_llw7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6c5u2")
text = "Play"

[node name="Controls" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_llw7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p3j25")
text = "Controls"

[node name="Options" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_llw7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p3j25")
text = "Options"

[node name="Credits" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_fonts/font = ExtResource("3_llw7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_p3j25")
text = "Credits"

[node name="Exit" type="Button" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(0.204793, 0.424378, 0.831968, 1)
theme_override_fonts/font = ExtResource("3_llw7x")
theme_override_font_sizes/font_size = 30
theme_override_styles/normal = SubResource("StyleBoxFlat_6c5u2")
text = "Exit"

[connection signal="pressed" from="MarginContainer/VBoxContainer/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/Exit" to="." method="_on_exit_pressed"]
